#1882 Fixed the image properties modal incorrectly equating 'wrap direction' with 'float direction' - left float now means right wrap and vice versa. Updated tutorial module JSON to include a demonstration of a text-wrapped image.

--- a/packages/obonode/obojobo-chunks-figure/image-properties-modal.scss
+++ b/packages/obonode/obojobo-chunks-figure/image-properties-modal.scss
@@ -108,7 +108,7 @@
 		}
 	}
 
-	.float-direction-input-parent {
+	.wrap-direction-input-parent {
 		display: inline-block;
 		position: relative;
 
